license and setup update

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,13 @@
 [metadata]
 name = stactools-viirs
 version = attr: stactools.viirs.__version__
-description = PROVIDE DESCRIPTION HERE
+description = stactools package for VIIRS sensor data
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = stac-utils
-author_email = stac@radiant.earth
+author = Preston Hartzell
+author_email = preston.hartzell@gmail.com
 url = https://github.com/stactools-packages/viirs
 project_urls =
-    Documentation = https://stactools-viirs.readthedocs.io/en/latest/
     Issues = https://github.com/stactools-packages/viirs/issues
 keywords =
     stactools
