--- a/mypy.ini
+++ b/mypy.ini
@@ -4,3 +4,8 @@ explicit_package_bases = True
 namespace_packages = True
 show_error_codes = True
 strict = True
+# allowing untyped calls for untyped numpy functions
+allow_untyped_calls = True
+
+[mypy-dateutil.*]
+ignore_missing_imports = True
