--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,10 @@ package_dir =
 packages = find_namespace:
 install_requires =
     stactools >= 0.3.1
+    h5py >= 3.6.0
 
 [options.packages.find]
 where = src
+
+[options.package_data]
+stactools.viirs = fragments/*/*.json
