avoid click problem

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ packages = find_namespace:
 install_requires =
     stactools >= 0.3.1
     h5py >= 3.6.0
+    click != 8.1.0
 
 [options.packages.find]
 where = src
