--- a/setup.cfg
+++ b/setup.cfg
@@ -27,8 +27,9 @@ package_dir =
 packages = find_namespace:
 install_requires =
     stactools >= 0.4.0
+    rasterio >= 1.3.2
     h5py >= 3.6.0
-    click != 8.1.0
+    click >= 8.1.3
 
 [options.packages.find]
 where = src
