--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,6 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - conda-forge::gdal>=3.3
-  - conda-forge::geos>=3.3
-  - conda-forge::rasterio>=1.3
-  - conda-forge::libstdcxx-ng # gdal dependency. Make sure it's from the same channel as gdal
-
-  
+  - gdal>=3.3
+  - geos>=3.3
+  - rasterio>=1.3
